sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '<-' expected but '=' found.
    for (i < 1 to m= get NombreValeurs()){
                   ^AlgBubbleSort1:16: error: illegal start of simple expression
 }
 ^